--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <system>Jira</system>
     <url>https://track.hpccsystems.com/browse/JAPI</url>
   </issueManagement>
-
+  <mychange/>
   <licenses>
     <license>
       <name>Apache License, Version 2.0</name>
